Russian language added

--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,10 @@
     $(document).ready(function() {
       // Full feature editor with custom language
       $("#text1").bbedit({
-        lang: 'zh-cn'
+//        lang: 'zh-cn'
+//        lang: 'zh-tw'
+        lang: 'en'
+//        lang: 'ru'
       });
       // Smiley editor
       $("#text2").bbedit({
